Frontend: Started on new design

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,9 @@
 :root {
-  --background-body: #222;
-  --button-hover: rgb(40, 40, 40);
-  --background: rgb(25, 25, 25);
-  --background-alt: rgb(25, 25, 25);
+  --primary: #03a9f4;
+  --secondary: #0288d1;
+  --tertiary: #0277bd;
+
+  --text: #eee;
+  --bg-primary: rgb(25, 25, 25);
+  --bg-secondary: rgb(30, 30, 30);
 }
