--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,9 +1,10 @@
 :root {
-	--primary: #03a9f4;
-	--secondary: #1f1f1f;
-	--tertiary: #0277bd;
+	--primary: #1484ea;
+	--secondary: #106ec3;
 
 	--text: #eee;
+	--text-secondary: rgb(206, 206, 206);
+
 	--bg-primary: rgb(25, 25, 25);
 	--bg-secondary: rgb(30, 30, 30);
 }
