--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -2,8 +2,6 @@
 	height: 96px;
 	width: 100%;
 
-	background-color: var(--bg-secondary);
-
 	display: flex;
 	align-items: center;
 }
@@ -27,4 +25,24 @@
 
 .logo {
 	border-radius: 50%;
+}
+
+.links {
+	display: flex;
+	align-items: center;
+
+	a {
+		color: var(--text);
+		margin-right: 1.5rem;
+
+		text-decoration: none;
+
+		font-size: 1.25rem;
+
+		transition: color 0.2s;
+
+		&:hover {
+			color: var(--primary);
+		}
+	}
 }
