--- a/src/components/Download.module.scss
+++ b/src/components/Download.module.scss
@@ -27,6 +27,14 @@
 	margin-right: 0.5rem;
 }
 
+.failed {
+	background-color: rgb(221, 52, 36);
+
+	&:hover {
+		background-color: rgb(197, 47, 33);
+	}
+}
+
 .info {
 	display: flex;
 	justify-content: space-between;
